final working assignment. waiting for deployment to azure labs
